# nautilus-bluetooth

./: .editorconfig  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.ac  package.json
backups/: fr.po.bak  it.po.bak  la.po.bak  tr.po.bak
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  it.po  la.po  nautilus-bluetooth.pot  nl.po  tr.po
src/: Makefile.am  nautilus-bluetooth.c
